# roboball

./: .gitignore  Dockerfile  README.md  TESTING_STRIKE_PLANNER.md  frames_2026-04-30_11.22.38.gv
src/: start_dev.sh
src/roboball_bringup/: package.xml  setup.cfg  setup.py
src/roboball_bringup/launch/: roboball_bringup.launch.py
src/roboball_bringup/roboball_bringup/: go_home.py  static_camera_tf.py
src/roboball_msgs/: CMakeLists.txt  package.xml
src/roboball_msgs/msg/: BallState.msg  StrikeTarget.msg
src/roboball_perception/: package.xml  setup.cfg  setup.py  visualize_ball_detection.py
src/roboball_perception/roboball_perception/: ball_detector.py  hsv_filter.py
src/roboball_planning/: package.xml  setup.cfg  setup.py
src/roboball_planning/roboball_planning/: controller.py  ik.py  ik_probe.py  kin_func_skeleton.py  strike_objectives.py  strike_planner.py  trajectories.py  trajectory_predictor.py  validate_trajectory.py
src/ros2_aruco/ros2_aruco/: aruco_node.py
src/simulation/launch/: sim.launch.py
src/simulation/worlds/: world.sdf
